[project]
name = "av-eval-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "nuscenes-devkit>=1.1.9",
    "pytest>=9.0.2",
    "torch>=2.9.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
